refactor: Jakarta geçişi
* javax ve temel çevrimler yapıldı. sadece core derlemesi yapıldı.

* hatalı yerler düzeltilmek için şimdilik kapatıldı